# example

compiled-website/: Dockerfile  compiled-website.cabal  docker-compose.yml
compiled-website/app/: Main.hs
compiled-website/content/posts/: first-post.md  test.md
compiled-website/templates/: default.html  index.html
