cabal-version:      2.0
name:               compiled-website
version:            0.1.0.0
build-type:         Simple

executable site
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:    base == 4.*
                  , hakyll >= 4.15 && < 4.16
                  , pandoc
                  , text
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
