cabal-version:      3.0
name:               compiled-website
version:            0.1.0.0
build-type:         Simple

executable site
    main-is:          Main.hs
    build-depends:    base >= 4.16 && < 5
                    , hakyll >= 4.15
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall